# signaling-sdk-samples-linux

./: .gitignore  AuthenticationEventHandler.cpp  AuthenticationEventHandler.h  AuthenticationWorkflowUI.cpp  AuthenticationWorkflowUI.h  BaseUI.cpp  BaseUI.h  CMakeLists.txt  LICENSE  MyRtmEventHandler.cpp  MyRtmEventHandler.h  QuickstartUI.h  README.md  RTMQuickStart copy.cpp  RTMQuickStart.cpp  SignalingDemo.cpp  SignalingManager.cpp  SignalingManager.h  SignalingManagerAuthentication.cpp  SignalingManagerAuthentication.h  TerminalColors.h  agora_rtm_cache.db  clean_build.sh  config.json  crash_context_v1
authentication-workflow/: AuthenticationEventHandler.cpp  AuthenticationEventHandler.h  AuthenticationWorkflowUI.cpp  AuthenticationWorkflowUI.h  README.md  SignalingAuthentication.cpp  SignalingManagerAuthentication.cpp  SignalingManagerAuthentication.h
data-encryption/: EncryptionEventHandler.cpp  EncryptionEventHandler.h  EncryptionUI.cpp  EncryptionUI.h  README.md  SignalingManagerEncryption.cpp  SignalingManagerEncryption.h
geofencing/: GeofencingUI.cpp  GeofencingUI.h  README.md  SignalingManagerGeofencing.cpp  SignalingManagerGeofencing.h
presence/: PresenceEventHandler.cpp  PresenceEventHandler.h  PresenceUI.cpp  PresenceUI.h  README.md  SignalingManagerPresence.cpp  SignalingManagerPresence.h
proxy-service/: ProxyUI.cpp  ProxyUI.h  README.md  SignalingManagerProxy.cpp  SignalingManagerProxy.h
sdk-quickstart/: BaseSignalingEventHandler.cpp  BaseSignalingEventHandler.h  QuickstartUI.cpp  QuickstartUI.h  README.md  SignalingManager.cpp  SignalingManager.h
storage/: README.md  SignalingManagerStorage.cpp  SignalingManagerStorage.h  StorageEventHandler.cpp  StorageEventHandler.h  StorageUI.cpp  StorageUI.h
stream-channel/: README.md  SignalingManagerStreamChannel.cpp  SignalingManagerStreamChannel.h  StreamChannelEventHandler.cpp  StreamChannelEventHandler.h  StreamChannelUI.cpp  StreamChannelUI.h
